# cpp_3d_engine

./: readme.md
raytracer/: CMakeLists.txt  pixel_calculator.h  postprocessor.h  raytracer.h  readme.md  screen.h
raytracer-debug/: CMakeLists.txt
raytracer-debug/tests/: test.cpp
raytracer-geom/: CMakeLists.txt  geometry.h  intersection.h  ray.h  sphere.h  triangle.h  vector.h
raytracer-geom/tests/: reflect.txt  refract.txt  sphere.txt  test.cpp  triangle.txt
raytracer-reader/: CMakeLists.txt  light.h  material.h  obj_reader.h  object.h  scene.h  type_reader.h
raytracer-reader/tests/: test.cpp
raytracer/options/: camera_options.h
raytracer/tests/: commons.h  test.cpp
